# gem-flux-mcp

./: .gitignore  .pre-commit-config.yaml  ARGO_TEST_READY.md  ARGO_TEST_RUNNING.md  BIO1_OBJECTIVE_FIX_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONFLICT_RESOLUTION_PLAN.md  CONVERSATION_SUMMARY_Task86.md  CRITICAL_MEDIA_APPLICATION_BUG_ANALYSIS.md  CURRENT_PHASE.txt  CURRENT_STATUS.md  DOCS_CLEANUP_PLAN.md  FOR_CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md.bak  IMPLEMENTATION_PLAN_AUDIT.md  IMPLEMENTATION_PLAN_UPDATED.md  LICENSE  MCP_INTEGRATION_STATUS.md  MEDIA_APPLICATION_FIX_SUMMARY.md  MODELSEEDPY_COBRAPY_HANDOFF.md  NEXT_TASK.md  PHASE2_RESULTS.md  PHASE_1_PREPARATION_PLAN.md  PROMPTS_CENTRALIZATION_PROPOSAL.md  PROMPTS_MIGRATION_COMPLETE.md  README.md  README_COMPARISON.md  README_MIGRATION_NOTES.md  README_SESSION.md  RELEASE_v0.2.1.md  REVIEW_SUMMARY.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  SOURCE_MATERIALS_SUMMARY.md  SPECS_CLAUDE.md  SPECS_PLAN.md  SYSTEMIC_ANALYSIS_FINDINGS.md  YOUR_QUESTIONS_ANSWERED.md  (+23 more)
.claude/: CLAUDE.md
.github/: markdown-link-check-config.json
.prompts/: deep-review.md  document-review.md
baseline_tests/: BASELINE_PHASE2_TEST.txt  BASELINE_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  README.md  test_tool_outputs.py
data/: README.md
docs/: API_AUDIT_REPORT.md  ARGO_LLM_INTEGRATION_ANALYSIS.md  ARGO_LLM_INTEGRATION_SUMMARY.md  ARGO_LLM_RELIABILITY_RESEARCH.md  ATP_CORRECTION.md  CI_CD_SETUP.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_MVP_STATUS.md  CLAUDE_DESKTOP_INTEGRATION.md  COBRAPY_API_REFERENCE.md  FINAL_SUMMARY.md  MCP_WORKING_DIRECTORY_GUIDE.md  MODELSEEDPY_API_REFERENCE.md  MODELSEEDPY_COBRAPY_PATTERNS.md  PHASE_0_CLEANROOM_SPECIFICATION_GUIDE.md  PHASE_11_MCP_INTEGRATION_PLAN.md  PHASE_1_IMPLEMENTATION_LOOP_GUIDE.md  REFACTORING_PROGRESS.md  SESSION_LIFECYCLE.md  TESTING.md  testing-guidelines.md  (+2 more)
(+238 files in other folders)
